--- a/Aula2.ipynb
+++ b/Aula2.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np"
+    "from sklearn.cluster import KMeans"
    ]
   },
   {
@@ -17,8 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "caminho_arquivo = \"/content/gdrive/My Drive/Colab Notebooks/Wine.csv\"\n",
-    "df = pd.read_csv(caminho_arquivo) #importando os dados"
+    "agrupador = KMeans(n_clusters=4)"
    ]
   },
   {
@@ -27,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"O dado possui\",df.shape[0], \"amostras e\", df.shape[1], \"atributos\")"
+    "agrupador.fit(df)"
    ]
   },
   {
@@ -36,7 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
+    "labels = agrupador.labels_\n",
+    "print(labels)"
    ]
   },
   {
@@ -45,9 +43,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_df = df['Customer_Segment']\n",
-    "df = df.drop(columns = 'Customer_Segment')\n",
-    "df.head()\n"
+    "agrupador = KMeans(n_clusters=4)\n",
+    "agrupador.fit(df)\n",
+    "labels = agrupador.labels_\n",
+    "print(labels)"
    ]
   },
   {
@@ -56,9 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.rename(columns = {'Alcohol' : 'Alcool', 'Ash' : 'Po', 'Ash_Alcalinity': 'Alcalinidade_po',\n",
-    "                          'Magnesium' : 'Magnesio','Total_Phenols' : 'Total_Fenois',\n",
-    "                          'Nonflavanoid_Phenols':'Fenois_nao_flavalonoides','Color_Intensity':'Intensidade_de_cor'})"
+    "fig = go.Figure()"
    ]
   },
   {
@@ -67,8 +64,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colunas = df.columns\n",
-    "colunas\n"
+    "fig.add_trace(go.Scatter(x=df['Intensidade_de_cor'],\n",
+    "                         y = df['Alcool'], mode = 'markers',                      \n",
+    "                          marker = dict(color = agrupador.labels_.astype(np.float)),\n",
+    "                        text = labels))\n"
    ]
   },
   {
@@ -77,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install biokit"
+    "fig.show()"
    ]
   },
   {
@@ -86,37 +85,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from biokit.viz import corrplot\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matriz_corr = df.corr()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corr_graf = corrplot.Corrplot(matriz_corr)\n",
-    "corr_graf.plot(upper = 'ellipse', fontsize = 'x-large')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.gcf()\n",
-    "fig.set_size_inches(13,8)\n",
+    "agrupador = KMeans(n_clusters=3)\n",
+    "agrupador.fit(df)\n",
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter(x=df['Intensidade_de_cor'],\n",
+    "                         y = df['Alcool'], mode = 'markers',                      \n",
+    "                          marker = dict(color = agrupador.labels_.astype(np.float)),\n",
+    "                        text = labels))\n",
+    " \n",
     "fig.show()\n"
    ]
   },
@@ -126,10 +102,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import preprocessing\n",
-    "\n",
-    "min_max_scaler = preprocessing.MinMaxScaler()\n",
-    "np_df = min_max_scaler.fit_transform(df)"
+    "fig = go.Figure()\n",
+    "fig.add_trace(go.Scatter3d(x=df['Intensidade_de_cor'],\n",
+    "                         y = df['Alcool'], z = df['Proline'],\n",
+    "                         mode = 'markers',                      \n",
+    "                          marker = dict(color = agrupador.labels_.astype(np.float)),\n",
+    "                        text = [0, 1, 2]))\n",
+    "fig.show()\n"
    ]
   },
   {
@@ -138,7 +117,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(np_df, columns = colunas)"
+    "fig.update_layout(scene = dict(\n",
+    "                    xaxis_title='Intensidade de Cor',\n",
+    "                    yaxis_title='Àlcool',\n",
+    "                    zaxis_title='Proline'))\n",
+    "fig.show()\n"
    ]
   },
   {
@@ -147,7 +130,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.describe()"
+    "centros = pd.DataFrame(agrupador.cluster_centers_)\n",
+    "centros.columns = colunas\n",
+    "centros.head()\n"
    ]
   },
   {
@@ -156,7 +141,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np_df = min_max_scaler.inverse_transform(df)\n"
+    "fig.add_trace(go.Scatter3d(x=centros['Intensidade_de_cor'],\n",
+    "                         y = centros['Alcool'], z=centros['Proline'],\n",
+    "                         mode = 'markers',                  \n",
+    "                          marker = dict(color = 'red'),\n",
+    "                        text = [0, 1, 2])\n"
    ]
   },
   {
@@ -164,10 +153,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_nao_normalizado = pd.DataFrame(np_df, columns = colunas)\n",
-    "df_nao_normalizado.describe()"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
