Update and rename Aula2.ipynb to Aula3.ipynb

--- a/Aula3.ipynb
+++ b/Aula3.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cluster import KMeans"
+    "from sklearn.cluster import DBSCAN"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agrupador = KMeans(n_clusters=4)"
+    "agrupador = DBSCAN(eps = 1.31, min_samples = 15, metric = 'manhattan')"
    ]
   },
   {
@@ -33,8 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = agrupador.labels_\n",
-    "print(labels)"
+    "agrupador.labels_"
    ]
   },
   {
@@ -43,10 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agrupador = KMeans(n_clusters=4)\n",
+    "agrupador = DBSCAN(eps = 0.01, min_samples = 15, metric = 'manhattan')\n",
     "agrupador.fit(df)\n",
-    "labels = agrupador.labels_\n",
-    "print(labels)"
+    "agrupador.labels_"
    ]
   },
   {
@@ -55,45 +53,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = go.Figure()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig.add_trace(go.Scatter(x=df['Intensidade_de_cor'],\n",
-    "                         y = df['Alcool'], mode = 'markers',                      \n",
-    "                          marker = dict(color = agrupador.labels_.astype(np.float)),\n",
-    "                        text = labels))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agrupador = KMeans(n_clusters=3)\n",
+    "agrupador = DBSCAN(eps = 10, min_samples = 15, metric = 'manhattan')\n",
     "agrupador.fit(df)\n",
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Scatter(x=df['Intensidade_de_cor'],\n",
-    "                         y = df['Alcool'], mode = 'markers',                      \n",
-    "                          marker = dict(color = agrupador.labels_.astype(np.float)),\n",
-    "                        text = labels))\n",
-    " \n",
-    "fig.show()\n"
+    "agrupador.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agrupador = DBSCAN(eps = 1.31, min_samples = 1, metric = 'manhattan')\n",
+    "agrupador.fit(df)\n",
+    "agrupador.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agrupador = DBSCAN(eps = 1.31, min_samples = 50, metric = 'manhattan')\n",
+    "agrupador.fit(df)\n",
+    "agrupador.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agrupador = DBSCAN(eps = 1.31, min_samples = 15, metric = 'l2')\n",
+    "agrupador.fit(df)\n",
+    "agrupador.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agrupador = DBSCAN(eps = 0.5, min_samples = 15, metric = 'l2')\n",
+    "agrupador.fit(df)\n",
+    "agrupador.labels_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agrupador = DBSCAN(eps = 1.31, min_samples = 15, metric = 'manhattan')\n",
+    "agrupador.fit(df)\n",
+    "print(agrupador.labels_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = agrupador.labels_+1\n",
+    "print(labels)"
    ]
   },
   {
@@ -104,48 +131,11 @@
    "source": [
     "fig = go.Figure()\n",
     "fig.add_trace(go.Scatter3d(x=df['Intensidade_de_cor'],\n",
-    "                         y = df['Alcool'], z = df['Proline'],\n",
-    "                         mode = 'markers',                      \n",
-    "                          marker = dict(color = agrupador.labels_.astype(np.float)),\n",
-    "                        text = [0, 1, 2]))\n",
-    "fig.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig.update_layout(scene = dict(\n",
-    "                    xaxis_title='Intensidade de Cor',\n",
-    "                    yaxis_title='Àlcool',\n",
-    "                    zaxis_title='Proline'))\n",
-    "fig.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "centros = pd.DataFrame(agrupador.cluster_centers_)\n",
-    "centros.columns = colunas\n",
-    "centros.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig.add_trace(go.Scatter3d(x=centros['Intensidade_de_cor'],\n",
-    "                         y = centros['Alcool'], z=centros['Proline'],\n",
-    "                         mode = 'markers',                  \n",
-    "                          marker = dict(color = 'red'),\n",
-    "                        text = [0, 1, 2])\n"
+    "                         y=df['Alcool'], z = df['Proline'],\n",
+    "                         mode='markers',                      \n",
+    "                      marker=dict(color =labels.astype(np.float)),\n",
+    "                        text=labels))\n",
+    "fig.show()"
    ]
   },
   {
