Update and rename Aula3.ipynb to Aula4.ipynb

--- a/Aula4.ipynb
+++ b/Aula4.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cluster import DBSCAN"
+    "from sklearn.cluster import MeanShift"
    ]
   },
   {
@@ -15,34 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agrupador = DBSCAN(eps = 1.31, min_samples = 15, metric = 'manhattan')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agrupador.fit(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agrupador.labels_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agrupador = DBSCAN(eps = 0.01, min_samples = 15, metric = 'manhattan')\n",
+    "agrupador = MeanShift()\n",
     "agrupador.fit(df)\n",
     "agrupador.labels_"
    ]
@@ -53,7 +26,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agrupador = DBSCAN(eps = 10, min_samples = 15, metric = 'manhattan')\n",
+    "from sklearn.cluster import estimate_bandwidth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BW = estimate_bandwidth(df, quantile = 0.2)\n",
+    "agrupador = MeanShift(bandwidth = BW)\n",
     "agrupador.fit(df)\n",
     "agrupador.labels_"
    ]
@@ -64,7 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agrupador = DBSCAN(eps = 1.31, min_samples = 1, metric = 'manhattan')\n",
+    "BW = estimate_bandwidth(df, quantile = 0.1)\n",
+    "agrupador = MeanShift(bandwidth = BW)\n",
     "agrupador.fit(df)\n",
     "agrupador.labels_"
    ]
@@ -75,7 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agrupador = DBSCAN(eps = 1.31, min_samples = 50, metric = 'manhattan')\n",
+    "BW = estimate_bandwidth(df, quantile = 0.9)\n",
+    "agrupador = MeanShift(bandwidth = BW)\n",
     "agrupador.fit(df)\n",
     "agrupador.labels_"
    ]
@@ -85,58 +70,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "agrupador = DBSCAN(eps = 1.31, min_samples = 15, metric = 'l2')\n",
-    "agrupador.fit(df)\n",
-    "agrupador.labels_"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "agrupador = DBSCAN(eps = 0.5, min_samples = 15, metric = 'l2')\n",
-    "agrupador.fit(df)\n",
-    "agrupador.labels_"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "agrupador = DBSCAN(eps = 1.31, min_samples = 15, metric = 'manhattan')\n",
-    "agrupador.fit(df)\n",
-    "print(agrupador.labels_)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "labels = agrupador.labels_+1\n",
-    "print(labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = go.Figure()\n",
-    "fig.add_trace(go.Scatter3d(x=df['Intensidade_de_cor'],\n",
-    "                         y=df['Alcool'], z = df['Proline'],\n",
-    "                         mode='markers',                      \n",
-    "                      marker=dict(color =labels.astype(np.float)),\n",
-    "                        text=labels))\n",
-    "fig.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
